[package]
name = "nmp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nmp_core"
crate-type = ["staticlib", "rlib"]

[features]
# `native` gates all I/O-bound code: the C-ABI FFI layer, the actor *runtime*
# (run_actor + dispatch + relay management + tick + DM / publish executors),
# relay_worker (tungstenite TCP), and the LMDB store backend. Enabled by
# default so existing native consumers see no change. V-41 — the LNURL HTTP
# worker (`ureq`) moved to `nmp-nip57::lnurl`; `nmp-core` no longer pulls
# `ureq`.
#
# Disable with `default-features = false` to compile only the pure kernel +
# `ActorCommand` data type + substrate traits for wasm32 or other no-std-io
# targets. V-01 Phase 1c (PR #339-ish): the kernel speaks the wire-transport-
# agnostic [`kernel::RelayFrame`] enum; `tungstenite::Message` is named only
# inside the gated `relay_worker` module. The `ActorCommand` enum + observer
# types + `NOSTRCONNECT_DEFAULT_RELAY_URL` stay always-compiled so
# `publish/action.rs` and every NIP-crate `ActionModule::execute` impl can
# name them without `native`. Only the actor *runtime* that consumes them is
# gated.
default = ["native"]
# I/O layer — native platforms (Linux, macOS, iOS, Android).
# Gates: tungstenite (still named by the actor's RelayEvent::Message arm —
# the `tungstenite::Message` type is the inbound wire frame nmp-network's
# `relay_worker` produces; the `tungstenite_message_to_relay_frame`
# conversion runs in `actor::dispatch`), heed, nostr-database,
# nmp-nostr-lmdb, and the chrono/clock feature.
#
# `nmp-network` itself is an unconditional dep (declared below) because
# `relay.rs` re-exports `RelayRole` from there for downstream callers;
# `nmp-network`'s wasm slice (default-features = false) compiles without
# the tungstenite/mio/rustls graph, so the wasm32 build keeps working.
#
# V-41 — `ureq` moved out with the LNURL fetcher (`nmp-nip57::lnurl`).
# Step 8 phase A — `mio`/`rustls` moved into `nmp-network` (gated by
# `nmp-network/native`); not re-pulled here.
native = [
    "dep:tungstenite",
    "nmp-network/native",
    "dep:heed",
    "dep:nostr-database",
    "dep:nmp-nostr-lmdb",
    "chrono/clock",
]
# NIP-47 Nostr Wallet Connect support. Gates the `nmp-nwc` protocol dependency,
# the `WalletStatus` snapshot projection, the `WalletRuntime` actor command arm,
# and the `nmp_app_wallet_*` FFI symbols. D0: nmp-core never *owns* an app noun;
# wallet state is opt-in protocol glue, not part of the protocol-neutral kernel.
# wallet requires native (NWC relay connection uses the actor thread).
wallet = ["dep:nmp-nwc", "native"]
# Expose actor internals for live-bench harnesses and integration test binaries.
# Never enable in production builds.
test-support = []
# Enable the LMDB-backed EventStore. Pulls in the NMP-local nostr-lmdb fork
# (with env-injection seam) + heed + nostr-database. ADR-0011, ADR-0012.
# lmdb-backend implies native (LMDB requires OS file I/O).
lmdb-backend = ["dep:nmp-nostr-lmdb", "dep:heed", "dep:nostr-database", "native"]
# Re-export all FFI entry-points via Rust paths so nmp-android-ffi can call them
# through the rlib dependency (extern "C" declarations are opaque to Rust CGU
# compilation — the android-ffi feature is the portable fix).
# android-ffi implies native (the FFI layer is C-ABI, native-only).
android-ffi = ["native"]
# V6 Stage 1 — Swift `Decodable` emitter. Adds `schemars::JsonSchema` derives
# to the projection types `nmp-codegen` reflects into Swift, and exposes the
# `dump_projection_schemas` binary that walks them. OFF by default — production
# builds never link `schemars` or the schema-export helper module. Enable with:
#   cargo run -p nmp-core --features codegen-schema --bin dump_projection_schemas
# (consumed by `nmp-codegen gen swift` in CI and at developer-loop time).
# See `docs/architecture-audit/v6-codegen-plan.md` §3b for the design rationale.
codegen-schema = ["dep:schemars"]

[dependencies]
bech32 = "0.11"
# `clock` feature reads the OS wall-clock; gated behind `native` so wasm32
# builds compile (wasm has no OS clock without a js-sys shim).
chrono = { version = "0.4", default-features = false }
# Insertion-ordered hash map. Powers `substrate::bounded::BoundedMessageMap` —
# the cap-and-evict-oldest primitive every long-lived per-projection message
# store now backs onto so memory and per-tick snapshot serialisation are
# bounded regardless of session length. Version pinned to match the
# transitively-resolved `indexmap 2.14` already in the lockfile (no new
# dependency tree branch).
indexmap = "2.14"
nmp-nip42-types = { path = "../nmp-nip42-types" }
# NIP-59 gift-wrap free functions (`gift_wrap` / `unwrap_gift_wrap`). Consumed
# by the `ActorCommand::SendGiftWrappedDm` arm to seal+wrap NIP-17 DM rumors on
# the actor thread. Kernel → protocol-module direction (ADR-0009 precedent:
# `nmp-nwc`); `nmp-nip59` is substrate-grade (carries no app/protocol nouns per
# its own crate docs) and stays kernel-agnostic — the dependency is one-way.
nmp-nip59 = { path = "../nmp-nip59" }
nostr = { workspace = true, features = ["nip44", "nip59"] }
# NIP-47 NWC protocol crate. Optional + feature-gated (`wallet`): D0 says the
# kernel never owns app nouns, so `nmp-core` must compile without it.
nmp-nwc = { path = "../nmp-nwc", optional = true }
nmp-signer-iface = { path = "../nmp-signer-iface" }
# Step 8 (extraction phase A): the native WebSocket relay worker
# (`relay_worker/`) + the wire-transport-agnostic `relay_protocol`
# constants moved to `nmp-network`. The actor consumes
# `nmp_network::relay_worker::{RelayEvent, RelayCommand, spawn_relay_worker}`
# under the `native` gate; `nmp-core` itself unconditionally re-exports
# `RelayRole` and uses `relay_protocol` constants, so the dep is
# always-on (with `default-features = false` so wasm32 stays clean).
# `mio` / `rustls` deps moved with the worker; they no longer appear in
# this manifest.
nmp-network = { path = "../nmp-network", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
# tungstenite: still named here because the kernel's outbound/inbound wire
# frame type is `tungstenite::Message` (the actor's `RelayEvent::Message`
# arm names it, and the conversion to `RelayFrame` runs in
# `actor::dispatch`). The native transport that *produces* these messages
# lives in `nmp-network`; the type lives here for the kernel→transport seam.
# optional=true so wasm32 builds (which use web_sys::WebSocket) compile
# without it.
tungstenite = { workspace = true, default-features = false, features = ["handshake", "rustls-tls-webpki-roots"], optional = true }
# Lightweight logging facade. Used by the NIP-17 DM send path to emit a
# diagnostic `warn!` when the recipient's kind:10050 DM-relay list is not yet
# cached and the send falls back to the configured Content relays — making the
# routing gap visible in logs rather than failing delivery silently. Already in
# the lockfile as a transitive of `nostr`; declaring it direct adds nothing new.
tracing = "0.1"
zeroize = { workspace = true }
# V6 Stage 1 — JSON Schema generation for the Swift `Decodable` emitter
# (`nmp-codegen gen swift`). Optional and gated behind `codegen-schema` so
# production builds (which never run the emitter) link no `schemars` /
# `schemars_derive` code. The derive is added side-by-side with `Serialize`
# via `#[cfg_attr(feature = "codegen-schema", derive(schemars::JsonSchema))]`
# on each projection type the emitter reflects.
schemars = { version = "0.8", optional = true }

# LMDB backend — feature-gated. The fork at crates/nmp-nostr-lmdb carries the
# env-injection seam (ADR-0011); heed / nostr-database are the underlying
# storage and event-encoding crates.
nmp-nostr-lmdb = { path = "../nmp-nostr-lmdb", optional = true }
heed = { version = "0.20", default-features = false, features = ["read-txn-no-tls"], optional = true }
nostr-database = { version = "0.44", default-features = false, features = ["flatbuf"], optional = true }

[dev-dependencies]
proptest = "1"
# Step 8 phase A — the `outbox_perf` example installs the ring crypto
# provider directly (it dials real relays so it needs to bootstrap rustls
# the same way the production worker does). The runtime dep moved with
# `relay_worker` to `nmp-network`; the example keeps a dev-only edge.
rustls = { workspace = true, default-features = false, features = ["ring"] }
tempfile = "3"

# NIP golden-tag conformance suite. Drives the (crate-private) command handlers
# through the `test-support` facade (`nmp_core::testing::ConformanceHarness`),
# so the test target only builds when that feature is enabled. Verify with:
#   cargo test -p nmp-core --features test-support --test nip_tag_conformance
[[test]]
name = "nip_tag_conformance"
path = "tests/nip_tag_conformance.rs"
required-features = ["test-support"]
