[package]
name = "nmp-marmot"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Marmot Protocol (MLS-over-Nostr) as a Layer-4 NIP crate. Sole importer of mdk-core/openmls; adapts MDK types to NMP Domain/View module contracts. Mutating ops dispatch through the generic nmp_app_dispatch_action(\"nmp.marmot\", …) seam (ADR-0025 retired in PR 3, 2026-05-23); the surviving nmp_marmot_* C-ABI cluster is read-side / stateful-handle lifecycle (per-app FFI, the same pattern Chirp's nmp_app_chirp_* cluster uses). See docs/plan/marmot-mls.md."

[lib]
# `staticlib` + `cdylib` so a future standalone Marmot app can link
# `libnmp_marmot.a` / `libnmp_marmot.dylib` directly without going through
# Chirp. `rlib` is retained for the in-tree consumer (`nmp-app-chirp` with
# `--features marmot`): the `#[no_mangle]` C symbols defined under the `ffi`
# feature flow through Chirp's `libnmp_app_chirp.a` via standard rlib
# inclusion — iOS continues linking exactly one staticlib
# (`libnmp_app_chirp.a`) and finds the `nmp_marmot_*` symbols there.
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# C-ABI shell (`src/ffi.rs` + siblings). Gates the platform credential-store
# deps (`keyring-core`, `apple-native-keyring-store`) so non-FFI consumers
# (in-process REPL, headless tests) do not pull them in. Chirp opts in via
# its own `marmot` feature (`nmp-marmot/ffi`).
ffi = ["dep:keyring-core", "dep:apple-native-keyring-store"]

[dependencies]
nmp-core = { path = "../nmp-core" }
# `nmp-ffi` owns the `NmpApp` C-ABI handle (extracted from
# `nmp-core::ffi` in step 11-final). The Marmot projection +
# bridge name the handle through this dep.
nmp-ffi = { path = "../nmp-ffi" }
# nmp-nip59 supplies the NIP-59 gift-wrap free functions used to deliver MLS
# Welcome (kind:444) rumors. nmp-marmot is the SOLE importer of mdk-core /
# openmls; nip59 is a sibling protocol crate carrying no MLS types.
nmp-nip59 = { path = "../nmp-nip59" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# nostr 0.44 — version pinned via [workspace.dependencies]; mdk-core 0.8.0
# re-exports the same nostr graph, so no version duplication.
nostr = { workspace = true, features = ["std"] }
mdk-core = "0.8.0"
mdk-sqlite-storage = "0.8.0"
# Keyring for the encrypted Marmot MLS SQLite DB. `mdk-sqlite-storage`
# requires a platform-specific keyring store to be initialized before use.
# Optional; activated by the `ffi` feature (only the C-ABI shell needs it).
keyring-core = { version = "1", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "tvos", target_os = "watchos", target_os = "visionos"))'.dependencies]
# Apple-native keyring backend for the encrypted MLS DB on Apple platforms.
# Optional; activated by the `ffi` feature.
apple-native-keyring-store = { version = "1.0", features = ["protected"], optional = true }

[dev-dependencies]
nmp-core = { path = "../nmp-core", features = ["test-support"] }
nmp-ffi = { path = "../nmp-ffi", features = ["test-support"] }
# test-utils gates MdkSqliteStorage::new_in_memory / new_unencrypted.
mdk-sqlite-storage = { version = "0.8.0", features = ["test-utils"] }
# `mdk-core` provides `NostrGroupConfigData` for the relocated FFI
# round-trip tests in `src/ffi/tests.rs` (previously a dev-dep of
# `nmp-app-chirp`).
mdk-core = "0.8.0"
