[package]
name = "nmp-nip01"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "NIP-01 short text notes (kind:1) relation surface as an NMP protocol crate — NoteRecord decoder (+ NIP-10 refs), NoteBuilder, RepliesView + ThreadView per docs/design/kind-wrappers.md §3 and view-catalog §5. Relation read-views + note builder only; kernel timeline extraction is a separate effort."

[dependencies]
nmp-core = { path = "../nmp-core" }
nmp-content = { path = "../nmp-content" }
nmp-feed = { path = "../nmp-feed" }
nmp-nip18 = { path = "../nmp-nip18" }
nmp-nip57 = { path = "../nmp-nip57" }
nmp-threading = { path = "../nmp-threading" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
nmp-core = { path = "../nmp-core", features = ["test-support"] }
